--- a/LegoArena/LegoArena.MainWindow/MainWindow.xaml
+++ b/LegoArena/LegoArena.MainWindow/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LegoArena.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" >
     <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="Resources/Background.jpg"/>
+        </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -17,6 +20,24 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
+
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TextBlock x:Name="TextGyro" FontWeight="Bold">Gyro Sensor: </TextBlock>
+            <TextBlock x:Name="TextUltra" Grid.Row="1" FontWeight="Bold">UltraSonic  Sensor: </TextBlock>
+            <TextBlock x:Name="TextColor" Grid.Row="2" FontWeight="Bold">Colour Sensor: </TextBlock>
+            <Label x:Name="GyroValue" Grid.Column="1" FontWeight="Bold"></Label>
+            <Label x:Name="UltraSonicValue" Grid.Column="1" Grid.Row="1" FontWeight="Bold"></Label>
+            <Label x:Name="ColourValue" Grid.Column="1" Grid.Row="2" FontWeight="Bold"></Label>
+        </Grid>
         <Label x:Name="Title" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20">LEGO ARENA</Label>
         <Image x:Name="ImageLeft" Grid.Row="2" />
         <Image x:Name="ImageRight" Grid.Column="2" Grid.Row="2" />
@@ -25,17 +46,5 @@
             <Button x:Name="FindSequence" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Width="85" Margin="7" Background="BlanchedAlmond" Foreground="Black">Find Sequence</Button>
             <Button x:Name="FindBlock" Grid.Column="1" Grid.Row="2" VerticalAlignment="Bottom" Width="85" Margin="7" Background="BlanchedAlmond" Foreground="Black">Find Block</Button>
         </StackPanel>
-        
-            <StackPanel Grid.Column="0" Grid.Row="1">
-                <Label x:Name="Gyro">Gyro Sensor: </Label>
-                <Label x:Name="UltraSonic">UltraSonic Sensor: </Label>
-            <Label x:Name="Colour">Color Sensor</Label>
-            </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="1">
-            <Label x:Name="GyroValue"></Label>
-            <Label x:Name="UltraSonicValue"></Label>
-            <Label x:Name="ColourValue"></Label>
-        </StackPanel>
-
     </Grid>
 </Window>
