--- a/LegoArena/LegoArena.MainWindow/MainWindow.xaml
+++ b/LegoArena/LegoArena.MainWindow/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="350" Width="525" >
     <Grid>
         <Grid.Background>
-            <ImageBrush ImageSource="Resources/Background.jpg"/>
+            <ImageBrush />
         </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
