--- a/LegoArena/LegoArena.MainWindow/MainWindow.xaml
+++ b/LegoArena/LegoArena.MainWindow/MainWindow.xaml
@@ -12,16 +12,18 @@
         </Grid.Background>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="0.8*"/>
+            <RowDefinition Height="1.5*" />
+            <RowDefinition Height="1.5*" />
+            <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Column="1" Grid.Row="1">
+        <Border Grid.Column="1" Grid.Row="1" BorderBrush="BlanchedAlmond" BorderThickness="5">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="1*"/>
@@ -31,20 +33,41 @@
                 <RowDefinition />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <TextBlock x:Name="TextGyro" FontWeight="Bold" Foreground="BlanchedAlmond">Gyro Sensor: </TextBlock>
-            <TextBlock x:Name="TextUltra" Grid.Row="1" FontWeight="Bold" Foreground="BlanchedAlmond">UltraSonic  Sensor: </TextBlock>
+                <TextBlock x:Name="TextGyro" FontWeight="Bold" Foreground="BlanchedAlmond">Gyro Sensor:</TextBlock>
+                <TextBlock x:Name="TextUltra" Grid.Row="1" FontWeight="Bold" Foreground="BlanchedAlmond">UltraSonic  Sensor: </TextBlock>
             <TextBlock x:Name="TextColor" Grid.Row="2" FontWeight="Bold" Foreground="BlanchedAlmond">Colour Sensor: </TextBlock>
             <Label x:Name="GyroValue" Grid.Column="1" FontWeight="Bold" Foreground="BlanchedAlmond"></Label>
             <Label x:Name="UltraSonicValue" Grid.Column="1" Grid.Row="1" FontWeight="Bold" Foreground="BlanchedAlmond"></Label>
             <Label x:Name="ColourValue" Grid.Column="1" Grid.Row="2" FontWeight="Bold" Foreground="BlanchedAlmond"></Label>
         </Grid>
-        <Label x:Name="Title" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" FontWeight="Bold" FontSize="20" Foreground="BlanchedAlmond">LEGO ARENA</Label>
-        <Image x:Name="ImageLeft" Grid.Row="2" />
-        <Image x:Name="ImageRight" Grid.Column="2" Grid.Row="2" />
+        </Border>
+        
+        
+        <Grid Grid.Column="1">
+            <Grid.Background>
+                <ImageBrush ImageSource="Resources/YellowBackground.jpg"/>
+            </Grid.Background>
+            <TextBlock x:Name="Title" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Center" FontWeight="Bold" FontSize="40" Foreground="BlanchedAlmond">LEGO ARENA</TextBlock>
+         
+        </Grid>
+
         <StackPanel Grid.Column="1" Grid.Row="2" VerticalAlignment="Center">
-            <Button x:Name="FindHome" Grid.Column="1" Grid.Row="2" VerticalAlignment="Top" Width="85" Margin="7" Background="BlanchedAlmond" Foreground="Black">Find Home</Button>
-            <Button x:Name="FindSequence" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Width="85" Margin="7" Background="BlanchedAlmond" Foreground="Black">Find Sequence</Button>
-            <Button x:Name="FindBlock" Grid.Column="1" Grid.Row="2" VerticalAlignment="Bottom" Width="85" Margin="7" Background="BlanchedAlmond" Foreground="Black">Find Block</Button>
+            
+            <Button x:Name="FindHome" Grid.Column="1" Grid.Row="2" VerticalAlignment="Top" Width="85" Margin="7" Foreground="BlanchedAlmond">Find Home
+                <Button.Background>
+                    <ImageBrush ImageSource="Resources/ButtonBackground.jpg"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="FindSequence" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" Width="85" Margin="7" Foreground="BlanchedAlmond">Find Sequence
+                <Button.Background>
+                    <ImageBrush ImageSource="Resources/ButtonBackground.jpg"/>
+                </Button.Background>
+            </Button>
+            <Button x:Name="FindBlock" Grid.Column="1" Grid.Row="2" VerticalAlignment="Bottom" Width="85" Margin="7" Foreground="BlanchedAlmond">Find Block
+                <Button.Background>
+                    <ImageBrush ImageSource="Resources/ButtonBackground.jpg"/>
+                </Button.Background>
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
